--- a/Client code/MobileSocial/res/layout/yg_dialog_actionbar.xml
+++ b/Client code/MobileSocial/res/layout/yg_dialog_actionbar.xml
@@ -25,7 +25,7 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Chats"
+            android:text="消息"
             android:textColor="#FFFFFF"
             android:textSize="17sp" />
     </LinearLayout>
