--- a/Client code/MobileSocial/res/layout/yg_recent_dialog_actionbar.xml
+++ b/Client code/MobileSocial/res/layout/yg_recent_dialog_actionbar.xml
@@ -13,7 +13,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Chats"
+        android:text="消息"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
