Add loading animation.

--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3_login_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3_login_dialog.xml
@@ -26,7 +26,7 @@
         android:inputType="textEmailAddress"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp" />
 
     <EditText
         android:id="@+id/yg_loginguide_page3_dialog_password"
@@ -39,9 +39,10 @@
         android:inputType="textPassword"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp" />
 
     <LinearLayout
+        android:id="@+id/yg_loginguide_page3_dialog_login_button_layout"
         android:layout_width="fill_parent"
         android:layout_height="60.0dip"
         android:layout_gravity="bottom"
@@ -71,5 +72,27 @@
             android:textColor="#1E90FF"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:minWidth="300dp"
+        android:minHeight="200dp"
+        android:gravity="center"
+        android:visibility="gone" >
+
+        <ImageView
+            android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout_left_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/yg_loading_bkg1" />
+
+        <ImageView
+            android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout_right_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/yg_loading_bkg2" />
+    </RelativeLayout>
 
 </LinearLayout>
