--- a/Client code/MobileSocial/res/layout/lj_songpuzzle_gameend_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_songpuzzle_gameend_dialog.xml
@@ -14,28 +14,40 @@
 
     <!-- "@android:color/white" -->
 
-	<TextView 
-	    android:id="@+id/lj_songpuzzle_dialog_correctnum_text"
-	    android:text=""
-	    android:layout_width="250dp"
+    <TextView
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-	    android:layout_marginTop="15dp"
-	    android:gravity="center"
-	    android:textColor="#1E90FF"
-	    android:paddingBottom="10dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp" />
-	<TextView 
-	    android:id="@+id/lj_songpuzzle_dialog_end_status_test"
-	    android:text=""
-	    android:layout_width="250dp"
+        android:paddingTop="10dp"
+        android:text="游戏结束"
+        android:textColor="#1E90FF" />
+
+    <TextView
+        android:id="@+id/lj_songpuzzle_dialog_correctnum_text"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-	    android:layout_marginTop="15dp"
-	    android:gravity="center"
-	    android:textColor="#1E90FF"
-	    android:paddingBottom="10dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:text=""
+        android:textColor="#1E90FF" />
+
+    <TextView
+        android:id="@+id/lj_songpuzzle_dialog_end_status_test"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:text=""
+        android:textColor="#1E90FF" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -59,9 +71,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minWidth="300dp"
-        android:minHeight="200dp"
         android:gravity="center"
+        android:minHeight="200dp"
+        android:minWidth="300dp"
         android:visibility="gone" >
 
         <ImageView
