--- a/Client code/MobileSocial/res/layout/lj_setting_remind_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_setting_remind_dialog.xml
@@ -54,8 +54,7 @@
             android:background="@android:color/white"
             android:gravity="center"
             android:text="是"
-            android:textColor="#1E90FF"
-            android:textStyle="bold" />
+            android:textColor="#1E90FF"/>
     </LinearLayout>
 
     <RelativeLayout
