--- a/Client code/MobileSocial/res/layout/yg_friendlist_item.xml
+++ b/Client code/MobileSocial/res/layout/yg_friendlist_item.xml
@@ -39,7 +39,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/button1"
+        android:id="@+id/yg_friendlist_item_star"
         android:layout_width="90dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="0dp"
@@ -47,9 +47,8 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:contentDescription="@string/app_name"
-        android:scaleType="fitCenter"
-        android:src="@drawable/yg_slide_yellow_star_gray_icon" />
-
+        android:scaleType="fitCenter" />
+<!--android:src="@drawable/yg_slide_yellow_star_gray_icon"   -->
     <ImageView
         android:id="@+id/button"
         android:layout_width="90dp"
