--- a/Client code/MobileSocial/res/layout/yg_select_image_activity.xml
+++ b/Client code/MobileSocial/res/layout/yg_select_image_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF" >
@@ -26,14 +26,16 @@
                 android:id="@+id/camera_icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/yg_select_image_camera_icon" />
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:src="@drawable/yg_select_image_camera_icon_style2" />
 
             <TextView
                 android:layout_width="match_parent"
-                android:padding="10dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/camera_icon"
                 android:gravity="center"
+                android:padding="10dp"
                 android:text="相机"
                 android:textColor="#1E90FF"
                 android:textSize="20sp" />
@@ -52,14 +54,16 @@
                 android:id="@+id/gallery_icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/yg_select_image_gallery_icon" />
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:src="@drawable/yg_select_image_gallery_icon_style2" />
 
             <TextView
                 android:layout_width="match_parent"
-                android:padding="10dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/gallery_icon"
                 android:gravity="center"
+                android:padding="10dp"
                 android:text="图册"
                 android:textColor="#ffffff"
                 android:textSize="20sp" />
@@ -77,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Or"
+            android:text=" ? "
             android:textColor="#ffffff"
             android:textSize="30sp" />
     </RelativeLayout>
