--- a/Client code/MobileSocial/res/layout/yg_dialoglist_item.xml
+++ b/Client code/MobileSocial/res/layout/yg_dialoglist_item.xml
@@ -65,7 +65,10 @@
             android:layout_toRightOf="@id/yg_dialoglist_item_friend_portrait"
             android:background="@drawable/yg_dialog_chatfrom_bg"
             android:gravity="center_vertical"
-            android:visibility="gone" />
+            android:visibility="gone"
+        	android:adjustViewBounds="true"
+        	android:maxWidth="150dp"
+        	android:maxHeight="200dp"/>
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_friend_audio"
@@ -144,7 +147,10 @@
             android:layout_toLeftOf="@id/yg_dialoglist_item_my_portrait"
             android:background="@drawable/yg_dialog_chatto_bg"
             android:gravity="center_vertical"
-            android:visibility="gone" />
+            android:visibility="gone" 
+        	android:adjustViewBounds="true"
+        	android:maxWidth="150dp"
+        	android:maxHeight="200dp"/>
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_my_audio"
