Add Feature : Server shake time and scope

--- a/Client code/MobileSocial/res/layout/lj_fragment_userinfo_setting.xml
+++ b/Client code/MobileSocial/res/layout/lj_fragment_userinfo_setting.xml
@@ -325,6 +325,7 @@
                 android:src="@drawable/lj_setting_line" />
 
             <LinearLayout
+                android:id="@+id/lj_userinfo_setting_singoff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
