--- a/Client code/MobileSocial/res/layout/tp_publicactivity_actionbar.xml
+++ b/Client code/MobileSocial/res/layout/tp_publicactivity_actionbar.xml
@@ -39,8 +39,29 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="XXX"
+        android:text="发布内容"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
+
+    <LinearLayout
+        android:id="@+id/tp_publicactivity_actionbar_send"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="发送"
+            android:textColor="#FFFFFF"
+            android:textSize="17sp" />
+    </LinearLayout>
 
 </RelativeLayout>
