--- a/Client code/MobileSocial/res/layout/tp_myselfpostactivity_actionbar.xml
+++ b/Client code/MobileSocial/res/layout/tp_myselfpostactivity_actionbar.xml
@@ -25,7 +25,7 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="朋友圈"
+            android:text="返回"
             android:textColor="#FFFFFF"
             android:textSize="17sp" />
     </LinearLayout>
