--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3_signup_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3_signup_dialog.xml
@@ -21,7 +21,7 @@
         android:background="#F5F5F5"
         android:focusable="true"
         android:gravity="left|center"
-        android:hint="Email"
+        android:hint="邮箱地址"
         android:inputType="textEmailAddress"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
@@ -34,7 +34,7 @@
         android:layout_marginTop="15dp"
         android:background="#F5F5F5"
         android:gravity="left|center"
-        android:hint="Pick nickname"
+        android:hint="昵称"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
@@ -46,7 +46,7 @@
         android:layout_marginTop="15dp"
         android:background="#F5F5F5"
         android:gravity="left|center"
-        android:hint="Create Password"
+        android:hint="密码"
         android:inputType="textPassword"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
@@ -68,7 +68,7 @@
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
-            android:text="Sign Up"
+            android:text="确认"
             android:textColor="#1E90FF"
             android:textStyle="bold"
             android:visibility="gone" />
@@ -81,7 +81,7 @@
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
-            android:text="You&apos;ll receive an Email to verify your identity."
+            android:text=""
             android:textSize="5pt" />
     </FrameLayout>
 
