--- a/Client code/MobileSocial/res/layout/yg_signup_activity.xml
+++ b/Client code/MobileSocial/res/layout/yg_signup_activity.xml
@@ -55,7 +55,7 @@
 
         <LinearLayout
             android:id="@+id/yg_signup_activity__signup_text_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical" >
@@ -66,7 +66,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="30dp"
-                android:text="Welcome to App!"
+                android:text="欢迎使用!"
                 android:textColor="@android:color/white"
                 android:textSize="14dp"
                 android:textStyle="bold" />
@@ -79,7 +79,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:text="Let&apos;s put a face to your account\nso your firends can find you."
+                android:text="您还需要填写一些基本信息"
                 android:textColor="@android:color/white"
                 android:textSize="13dp" />
 
@@ -91,7 +91,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:background="@android:color/transparent"
-                android:text="OK"
+                android:text="继续"
                 android:textColor="@android:color/white"
                 android:textSize="18dp" />
         </LinearLayout>
