--- a/Client code/MobileSocial/res/layout/yg_signup_second_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_signup_second_dialog.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/yg_signup_second_dialog_birthday_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
@@ -25,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:hint="Your birthday" />
+            android:hint="设置生日" />
     </LinearLayout>
 
     <LinearLayout
@@ -39,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hometown" />
+            android:text="家乡" />
 
         <LinearLayout
             android:id="@+id/lj_setting_hometown_layout"
@@ -78,7 +79,7 @@
         android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:gravity="center"
-        android:text="Done"
+        android:text="完成"
         android:textColor="#1E90FF"
         android:textSize="20dp"
         android:textStyle="bold" />
