--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3.xml
@@ -10,12 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
         android:src="@drawable/yg_loginguide_page3_logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:text="解密陌生人"
         android:textColor="@android:color/white"
         android:textSize="13pt" />
