--- a/Client code/MobileSocial/res/layout/yg_loginguide_page2.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page2.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#0065CA"
+    android:background="@drawable/yg_loginguide_page3_background"
     android:orientation="vertical" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Page-2"
+        android:layout_marginTop="40dp"
+        android:text="匿名朋友圈"
         android:textColor="@android:color/white"
-        android:textSize="22pt" />
+        android:textSize="20sp" />
 
 </LinearLayout>
