--- a/Client code/MobileSocial/res/layout/yg_signup_activity.xml
+++ b/Client code/MobileSocial/res/layout/yg_signup_activity.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        
         android:background="@drawable/yg_loginguide_page3_logo" />
 
     <RelativeLayout
@@ -87,13 +89,14 @@
                 android:id="@+id/yg_signup_activity_ok"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:background="@android:color/transparent"
+                android:gravity="center"
                 android:text="继续"
                 android:textColor="@android:color/white"
-                android:textSize="18dp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
     </RelativeLayout>
 
