--- a/Client code/MobileSocial/res/layout/yg_welcome_activity.xml
+++ b/Client code/MobileSocial/res/layout/yg_welcome_activity.xml
@@ -1,11 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="#1E90FF" >
 
-    <ImageView
+    <!--
+         <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/welcome"
         android:contentDescription="@string/app_name" />
+    -->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="欢迎使用"
+        android:textColor="@android:color/white"
+        android:textSize="30sp" />
+
 </RelativeLayout>
