--- a/Client code/MobileSocial/res/layout/lj_testnetworkconnect_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_testnetworkconnect_dialog.xml
@@ -14,13 +14,13 @@
 
     <!-- "@android:color/white" -->
     <TextView
-        android:text="正在测试网络环境，请稍后"
+        android:text="正在测试网络环境，请稍后..."
         android:id="@+id/yg_loginguide_page3_dialog_password"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@color/white"
-        android:gravity="left|center"
+        android:gravity="center"
         android:textColor="#1E90FF"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
